maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: ';' expected but '=' found.
      	(x, y) = (i,j)
               ^